fixed broken css in preference select2 box

--- a/src/css/preferences.css
+++ b/src/css/preferences.css
@@ -64,3 +64,11 @@ hr {
 label.checkbox {
 	margin-bottom: 0;
 }
+
+/*
+ * fixed select2
+ */
+
+.select2-drop {
+	margin-top: -3px;
+}
